--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
-body {
-    text-align: justify, center;
-    font-family: 'Courier New', Courier, monospace
-}
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-div {
-    align-items: center;
+h1 {
+    font-weight: bold;
+    font-size: 3em;
+    font-family: 'Press Start 2P', monospace;
 }
