--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,18 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
+* {
+    font-family: 'Source Code Pro', monospace;
+    text-align: center;
+}
+
 h1 {
     font-weight: bold;
-    font-size: 3em;
     font-family: 'Press Start 2P', monospace;
+}
+
+ul {
+    list-style: none;
 }
