--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@
 }
 
 h1 {
-    font-weight: bold;
+    font-weight: lighter;
     font-family: 'Press Start 2P', monospace;
+    font-size: 2em;
 }
 
 ul {
