--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
-* {
+body {
     font-family: 'Source Code Pro', monospace;
     text-align: center;
 }
@@ -17,4 +17,17 @@ h1 {
 
 ul {
     list-style: none;
+}
+
+.perfil {
+    display: inline-block;
+    text-align: left;
+    height: fit-content;
+    width: fit-content;
+    border-radius: 30px;
+}
+
+.destaque:hover {
+    background-color: lightcoral;
+    text-transform: uppercase;
 }
