--- a/css/style.css
+++ b/css/style.css
@@ -12,22 +12,45 @@ body {
 h1 {
     font-weight: lighter;
     font-family: 'Press Start 2P', monospace;
-    font-size: 2em;
 }
 
 ul {
     list-style: none;
 }
 
-.perfil {
-    display: inline-block;
-    text-align: left;
-    height: fit-content;
-    width: fit-content;
-    border-radius: 30px;
+#foto {
+    width: 140px;
+    background-color: black;
+    color: #FFF;
+    border-radius: 50%;
 }
 
-.destaque:hover {
-    background-color: lightcoral;
-    text-transform: uppercase;
+.perfil {
+    display: flex;
+    text-align: left;
+    align-items: center;
+    background-color: lightgray;
+
+    width: max-content;
+
+    border-radius: 30px;
+    margin: auto;
+    padding: 20px;
+}
+
+.perfil:hover {
+    background-image: linear-gradient(to right, rgba(250, 128, 114, 0.507), rgba(0, 0, 255, 0.479));
+}
+.github {
+    margin: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+.footer > div {
+    margin: 10px;
 }
