--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
 
 :root {
     /* Paleta de cores padrão. */
@@ -19,8 +13,7 @@
 
     /* Fontes padrões. */
     --fonte-destaque: 'Share Tech Mono', monospace;
-    --fonte-conteudo: 'Fira Code', monospace;
-    font-weight: normal;
+    --fonte-conteudo: 'Work Sans', sans-serif;
 }
 
 header {
@@ -43,6 +36,7 @@ header a {
     border-radius: 10px;
     border-style: solid;
     border-color: var(--cor0);
+    transition: 0.2s;
 }
 
 header a:hover {
@@ -57,9 +51,13 @@ main {
     flex-direction: column;
 
     font-family: var(--fonte-conteudo);
-    background-color: var(--cor2);
 
-    border-radius: 30px;
+    background-image: url(../midia/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 20px;
     width: 800px;
     margin: auto;
     padding: 20px;
@@ -76,19 +74,22 @@ main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
+
     text-align: left;
-    background-color: white;
+
+    background-color: rgba(255, 255, 255, 0.507);
+    backdrop-filter: blur(5px);
+    transition: 0.5s;
 
     max-width: 800px;
-    border-radius: 20px;
+    border-radius: 15px;
     padding: 20px;
     margin-bottom: 20px
 }
 
 .perfil:hover {
-    background-image: linear-gradient(to right, var(--cor0), var(--cor1), var(--cor2), var(--cor3));
-    color: white;
+    background-color: rgba(255, 255, 255, 0.747);
+    backdrop-filter: blur(10px);
 }
 
 ul {
@@ -101,15 +102,18 @@ abbr {
 }
 
 .github {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.507);
+    backdrop-filter: blur(5px);
+    transition: 0.5s;
+
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 15px;
     text-align: center;
 }
 
 .github:hover {
-    background-image: linear-gradient(to right, var(--cor0), var(--cor1), var(--cor2), var(--cor3));
-    color: white;
+    background-color: rgba(255, 255, 255, 0.747);
+    backdrop-filter: blur(10px);
 }
 
 .github img {
